# cplusplus

./: .travis.yml  CMakeLists.txt  README.md  Worker.cpp  Worker.hpp  codecov.yml  main.cpp  tests.cpp  tests.hpp
.github/workflows/: build.yml  cmake.yml  tests.yml
